--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,7 +25,7 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><%= url %></td>
+            <td><a href="/urls/<%=url%>"><%= url %></a></td>
             <td><%= urls[url] %></td>
           </tr>
         <% } %>
