--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,6 +20,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -28,6 +29,11 @@
           <tr>
             <td><a href="/urls/<%=url%>"><%= url %></a></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form action="/urls/<%=url%>" method="GET" >
+                <button type="submit" class="btn btn-outline-primary">Edit</button>
+              </form>
+            </td>
             <td>
               <form action="/urls/<%=url%>/delete" method="POST" >
                 <button type="submit" class="btn btn-outline-danger">Delete</button>
