--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,10 +5,33 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      </div>
+      </ul>
+      <form class="form-inline my-2 my-lg-0" action="/login" method="POST">
+        <input class="form-control" type="text" name="username" placeholder="Enter Username" style="width: 300px; margin: 1em">
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
     </div>
   </nav>
 </header>
+
+
+<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+  </ul>
+  <form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+</div>
