--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,8 +20,8 @@
       <div>
         <h3>Edit</h3>
       </div>
-      <div class="row">
-        <div class="col-12">
+      <div class="container text-center">
+        <div class="row text-center">
           <form class="form-inline" action="/urls/<%=shortURL%>" method="POST">
             <div class="form-group mb-2">
               <label for="longURL">New URL:</label>
