--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-md navbar-dark bg-success" style="height:4em">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,10 +9,17 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </ul>
-      <form class="form-inline my-2 my-lg-0" action="/login" method="POST">
-        <input class="form-control" type="text" name="username" placeholder="Enter Username" style="width: 300px; margin: 1em">
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
+      <% if (! username) { %>
+        <form class="form-inline my-2 my-lg-0" action="/login" method="POST">
+          <input class="form-control" type="text" name="username" placeholder="Enter Username" style="width: 300px; margin: 0.5em">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+      <% } else { %>
+        <form class="form-inline my-2 my-lg-0" action="/login" method="POST">
+          <li class="nav-item nav-link" href=""> Logged In As: <%=username%></li>
+          <button type="submit" class="btn btn-primary">Logout</button>
+        </form>
+      <% } %>
     </div>
   </nav>
 </header>
