--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,9 +10,12 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </ul>
       <% if (!user) { %>
-        <form class="form-inline my-2 my-lg-0" action="/login" method="POST">
-          <input class="form-control" type="text" name="username" placeholder="Enter Username" style="width: 300px; margin: 0.5em">
+        <form class="form-inline my-2 my-lg-0" style="margin:0.5em;" action="/login" method="POST">
+          <input class="form-control" type="text" name="email" placeholder="Enter Username" style="width: 300px; margin: 0.5em">
           <button type="submit" class="btn btn-dark">Login</button>
+        </form>
+        <form class="form-inline my-2 my-lg-0" action="/register" method="GET">
+          <button type="submit" class="btn btn-dark">Register</button>
         </form>
       <% } else { %>
         <form class="form-inline my-2 my-lg-0" action="/logout" method="POST">
