--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><a href="/urls/<%=url%>"><%= url %></a></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
             <td>
               <form action="/urls/<%=url%>" method="GET" >
                 <button type="submit" class="btn btn-outline-primary">Edit</button>
