--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,11 +5,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      </ul>
       <% if (!user) { %>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0"></ul>
         <form class="form-inline my-2 my-lg-0" style="margin:0.5em;" action="/login" method="GET">
           <button type="submit" class="btn btn-dark">Login</button>
         </form>
@@ -17,6 +14,10 @@
           <button type="submit" class="btn btn-dark">Register</button>
         </form>
       <% } else { %>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        </ul>
         <form class="form-inline my-2 my-lg-0" action="/logout" method="POST">
           <li class="nav-item nav-link" href=""> Logged In As: <%=user.email%></li>
           <button type="submit" class="btn btn-outline-dark">Logout</button>
