--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -24,7 +24,7 @@
         <h3>Edit</h3>
       </div>
       <div class="container text-center">
-        <div class="row text-center">
+        <div class="row">
           <form class="form-inline" action="/urls/<%=shortURL%>" method="POST">
             <div class="form-group mb-2">
               <label for="longURL">New URL:</label>
