--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <title>TinyApp | URL</title>
   </head>
-
 <body>
   <header>
     <%- include('partials/_header'); %>
@@ -24,15 +23,13 @@
         <h3>Edit</h3>
       </div>
       <div class="container text-center">
-        <div class="row">
-          <form class="form-inline" action="/urls/<%=shortURL%>" method="POST">
-            <div class="form-group mb-2">
-              <label for="longURL">New URL:</label>
-              <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </form>
-        </div>
+        <form class="form-inline justify-content-center" action="/urls/<%=shortURL%>" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">New URL:</label>
+            <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
