--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,15 @@
     <header>
       <%- include('partials/_header') %>
     </header>
+    <% if (error) { %>
+      <div class="container text-center">
+        <div class="row text-center" style="background-color: #fa8780;">
+          <div class="col-12">
+            <h5 style="align-items: center;"><%= error %></h5>
+          </div>
+        </div>
+      </div>
+    <% } %>
     <div class="container text-center" style="padding-top:2em">
       <div class="row text-center">
         <div class="col-12">
